test/tests/errors/error-if-com.sm
// true
// false
/**/
/**/

program {
    var x = 1;
    if (x) {
        x = 4;
    } else {
        x = 5;
    }
}